# nano-megatron

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  train.py
nanomegatron/: config.py
nanomegatron/layers/: attention.py  dist_primitives.py  embed_head.py  layernorm.py  linear.py
nanomegatron/models/: qwen3.py
nanomegatron/optim/: clip_grads.py  grad_accumulator.py  lr_scheduler.py
nanomegatron/utils/: checkpoint.py  context.py  data.py  loss.py
