[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-megatron"
version = "0.1.0"
authors = [{ name = "Shengling Qin" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight Megatron implementation"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.51.0",
    "flash-attn",
    "safetensors",
    "datasets",
    "pyyaml",
]

[project.urls]
Homepage="https://github.com/Odysseusq/nano-megatron"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanomegatron*"]
